# nim-raft

./: .gitignore  README.md  SSZ_SERIALIZATION_PLAN.md  config.nim  raft.nimble  raft.nims  spec.md  tasks.md
.github/workflows/: ci.yml
artifacts/: happy_3node.html  happy_3node.json  minority_partition.html  minority_partition.json  snapshot_stress.html  snapshot_stress.json
doc/: proposal.md
reference/: CMakeLists.txt
scenarios/: chaos_no_wipe.json  chaos_restart_wipe.json  happy_3node.json  happy_3node_fast.json  happy_3node_low_drop.json  happy_3node_perfect_net.json  minority_partition.json  restart_and_wipe.json  snapshot_stress.json  tail_latency_bursts.json  test_low_rate.json
sim/core/: sim_clock.nim  sim_rng.nim  sim_scheduler.nim  types.nim
sim/invariants/: checker.nim
sim/net/: sim_net.nim
sim/raft/: node_host.nim  raft_interface.nim  raft_sm_adapter.nim
sim/report/: ci_summary.nim  html_timeline.nim  json_writer.nim
sim/run/: main.nim  scenario_builder.nim  scenario_config.nim  scenario_runner.nim
sim/storage/: sim_storage.nim
src/raft/: consensus_state_machine.nim  log.nim  serialize.nim  ssz.nim  state.nim  tracker.nim  (+1 more)
tests/: all_tests.nim  test_bls_cluester.nim  test_bls_cluster.nim  test_conflict_optimization.nim  test_consensus_state_machine.nim  test_leader_stepdown.nim  test_log.nim  test_serialization.nim  test_sim_clock.nim  test_sim_rng.nim  test_ssz_appendentries_basic.nim  test_ssz_appendentries_many.nim  test_ssz_requestvote.nim  test_ssz_snapshot.nim  test_state.nim  test_zipf_sampler.nim
tools/: compare_encoding.nim
